Kevin to Achment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Kevin : Home</title>
+  <title>Achment : Home</title>
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico" />
   <!-- Font Awesome -->
@@ -58,7 +58,7 @@
             </button>
 
             <!-- Text Logo -->
-            <a class="navbar-brand" href="#">Achment - Triantafyllos Naidi</a>
+            <a class="navbar-brand" href="#">Achment</a>
 
             <!-- Image Logo -->
             <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
@@ -90,14 +90,14 @@
       <div class="row">
         <div class="col-md-12">
           <div class="mu-featured-area">
-            <h1>Kevin Petter</h1>
+            <h1>Achment - Triantafyllos Naidi</h1>
 
             <!-- Start text slide -->
             <div class="mu-featured-slider-wrapper">
               <div class="mu-featured-slider" id="typed-strings">
-                <p>I am <span>UI/UX Designer</span></p>
-                <p>I am <span>Web Developer</span></p>
-                <p>I am <span>Photographer</span></p>
+                <p>I am <span>Mechanical Engineer</span></p>
+                <p>I am <span>Computational Mechanics Engineer</span></p>
+                <!-- <p>I am <span>Photographer</span></p> -->
               </div>
               <span id="typed"></span>
             </div>
